# moradi2025realworldFL

./: .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
flwr-ntnu-zgt/: pyproject.toml
flwr-ntnu-zgt/flwr_ntnu_zgt/: __init__.py  client_app.py  plans.json  server_app.py  strategy.py  task.py
nnUNet/nnunetv2/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
nnUNet/nnunetv2/experiment_planning/dataset_fingerprint/: fingerprint_extractor.py
nnUNet/nnunetv2/experiment_planning/experiment_planners/: default_experiment_planner.py
nnUNet/nnunetv2/run/: load_pretrained_weights.py  run_training.py
nnUNet/nnunetv2/training/lr_scheduler/: polylr.py
nnUNet/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py
nnUNet/nnunetv2/training/nnUNetTrainer/variants/loss/: nnUNetTrainerCELoss.py
nvflare_client_local/: meta.json  project.yml
nvflare_client_local/app/config/: config_fed_client.json  config_fed_server.json
nvflare_client_local/app/custom/: custom_pt_model_persistor.py  network.py  nnunet_executor.py  plans.json  pt_model_locator.py  utils.py
