[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-ntnu-zgt"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "https://github.com/AshknMrd"

[tool.flwr.app.components]
serverapp = "flwr_ntnu_zgt.server_app:app"
clientapp = "flwr_ntnu_zgt.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20
min-available-clients = 1
min-fit-clients = 1
min-evaluate-clients = 1
fraction-fit = 1
fraction-evaluate = 1
client-names = '{"0": "ntnu","1": "zgt"}'
epochs = 25
folds = 0
checkpoint = "checkpoint_final.pth"
plan-identifier = "nnUNetPlans"
configuration = "3d_fullres"
client-base-dir = "/workdir/results"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 1
options.backend.client-resources.num-cpus = 2 
options.backend.client-resources.num-gpus = 0.3

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

